# identicli

./: README.md  pyproject.toml
src/: identicon_service.py  main.py
src/weather/: models.py  weather_client.py
state/: state.json
test/integration/: test_identicon_service.py
test/integration/weather/: test_weather_client.py
