[tool.poetry]
name = "identicli"
version = "0.1.0"
description = ""
authors = ["Wyatt Queirolo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.10.2"
aiohttp = "^3.8.3"

[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"
pytest-mock = "*"
pytest-asyncio = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
